# ssoo

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .npmrc  AGENTS.md  CLAUDE.md  Dockerfile  HANDOFF.md  README.md  commitlint.config.mjs  compose.yaml  dms.config.default.json  docker-compose.yml  next.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.base.json  tsconfig.json  turbo.json
.codex/: README.md
.github/: MIGRATION.md  README.md  copilot-instructions.md  quality-report.json
.github/templates/config/python-poetry/: .gitignore  pyproject.toml
.husky/: commit-msg  pre-commit  pre-push
.tmp-bin/: pnpm  pnpx  yarn  yarnpkg
app/: globals.css  layout.tsx
automation/: README.md  playwright.config.ts
components/: AIChat.tsx  CollaborationIndicator.tsx  Comments.tsx  CreateFileModal.tsx  LinkModal.tsx  MarkdownToolbar.tsx  PluginManager.tsx  TagManager.tsx  TemplateSelector.tsx  TextSearch.tsx  TreeComponent.tsx  WikiApp.tsx  WikiEditor.tsx  WikiSidebar.tsx
contexts/: GeminiChatContext.tsx  NotificationContext.tsx  WikiContext.tsx
docker/: db-init.Dockerfile
docs/: AGENTS.md  CHANGELOG.md  README-dev.md  README.md  getting-started.md
hooks/: index.ts  useAutoScroll.ts  useEditor.ts  useFileOperations.ts  useFileSystem.ts  useTreeData.ts
lib/: templates.ts
scripts/: check-dms-gitlab-ops-docs.mjs  db-init-entrypoint.sh  docs-verify.js  harness-compat.sh  run-observed-command.sh  verify-access-admin.mjs  verify-access-dms.mjs  verify-access-smoke.mjs  (+7 more)
(+3790 files in other folders)
